apps/base/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf-ui
  namespace: audiobookshelf
  labels:
    app.kubernetes.io/name: audiobookshelf
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: audiobookshelf
